# chinook-explorer

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: tutorial.ipynb
src/chinook_explorer/: __init__.py  analytics.py  io.py  modeling.py  viz.py
